<resources>
    <string name="app_name">SlideME</string>
    <string name="facebook_app_id">120678975139467</string>
    <string name="password">Password</string>
    <string name="sign_in">SIGN IN</string>
    <string name="login_now">Already registered? Login now!</string>
    <string name="failedLogin">Sign in failed. Invalid userName or password.</string>
    <string name="pleaseWait">Please wait...</string>
    <string name="userName">Username</string>
    <string name="or">or</string>
    <string name="facebook">Facebook</string>
    <string name="luckycode">LuckyCode</string>
    <string name="email">Email</string>
    <string name="sign_up">Sign up</string>
    <string name="signInStatus">Sign In Status</string>
    <string name="enterAnUserName">Enter an userName</string>
    <string name="enterAPassword">Enter a password</string>
    <string name="emptyUserName">UserName cannot be empty</string>
    <string name="emptyPassword">Password cannot be empty</string>
    <string name="emptyEmail">Email cannot be empty</string>
    <string name="shortUsername"><![CDATA[UserName must be >=6 characters]]></string>
    <string name="shortPassword"><![CDATA[Password must be >=8 characters]]></string>
    <string name="invalidEmail">Invalid email</string>
    <string name="sigupStatus">Sign up status</string>
    <string name="invalidUsername">This userName already exists</string>
    <string name="pick_image_intent_text">Pick image</string>
    <string name="updateImageError">Error tryng to update photo</string>
    <string name="emptyImageError">You need to choose a profile photo</string>
    <string name="title_activity_choose_picture">ChoosePictureActivity</string>
    <string name="selectApicture">Select a picture</string>
    <string name="start">Start</string>
    <string name="browse">Browse</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="choseAPicture">Select a picture</string>
    <string name="ranking">Ranking</string>
    <string name="myBest">My best</string>
    <string name="otherOptions">Other options</string>
    <string name="settings">Settings</string>
    <string name="signOut">Sign out</string>
    <string name="random">Random</string>
    <string name="level">Level</string>
    <string name="game_over">GAME OVER</string>
    <string name="retry">Retry</string>
    <string name="exit">Exit</string>
    <string name="timeSpent">Time spent:</string>
    <string name="moves">Moves: </string>
    <string name="congratulions">Congratulations, you WIN</string>
    <string name="next">Next</string>
    <string name="featureNotImplemented">This feature has not been implemented yet</string>
    <string name="chooseAPhoto">You need to choose a photo</string>
</resources>
