<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="#000000"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:background="@drawable/game_over"/>

    </RelativeLayout>

    <View
        android:id="@+id/divider"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="3dp"
        android:layout_marginTop="3dp"
        android:background="@drawable/dialog_divider" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">

        <TextView
            android:id="@+id/timeSpent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15dp"
            android:text="@string/timeSpent"
            android:textColor="#FFFFFF"
            />

        <TextView
            android:id="@+id/moves"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15dp"
            android:textColor="#FFFFFF"
            android:layout_below="@+id/timeSpent"
            android:text="@string/moves">
        </TextView>

    </RelativeLayout>


    <LinearLayout
        android:id="@+id/botonera"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:weightSum="1">


        <Button
            android:layout_width="0dp"
            android:layout_height="25dp"
            android:layout_weight="0.5"
            android:textColor="#FFFFFF"
            android:text="@string/retry"
            android:background="#00BCD4"
            android:id="@+id/retry"
            />

        <Button
            android:layout_width="0.5dp"
            android:layout_height="25dp"
            android:text="@string/exit"
            android:id="@+id/exit"
            android:layout_marginLeft="8dp"
            android:background="#E91E63"
            android:textColor="#FFFFFF"
            android:layout_weight="0.5"/>

    </LinearLayout>

</LinearLayout>