<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="95dp">

        <de.hdodenhof.circleimageview.CircleImageView
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/profilePicture"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:src="@drawable/empty_profile"
            android:layout_centerHorizontal="true"
            android:clickable="true"
            app:civ_border_width="0dp"
            app:civ_border_color="#FF000000"
            android:layout_marginBottom="10dp"/>

        <android.support.design.widget.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fabSize="mini"
            android:id="@+id/uploadPhoto"
            android:src="@android:drawable/ic_menu_camera"
            android:layout_alignParentBottom="true"
            android:layout_alignRight="@+id/profilePicture"
            android:layout_alignEnd="@+id/profilePicture" />

        <ProgressBar
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:visibility="gone"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:id="@+id/progressImage" />

    </RelativeLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/userName_layout"
        android:background="#00000000"
        android:layout_centerHorizontal="true">>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/userName"
            android:ems="10"
            android:id="@+id/userName"
            android:singleLine="true"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/email_layout"
        android:layout_centerHorizontal="true">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:ems="10"
            android:id="@+id/email"
            android:singleLine="true"
            android:inputType="textEmailAddress" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/password_layout"
        android:layout_centerHorizontal="true">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:ems="10"
            android:id="@+id/password"
            android:singleLine="true"
            android:inputType="textPassword" />

    </android.support.design.widget.TextInputLayout>

    <Button android:id="@+id/sign_up"
        android:layout_width="match_parent"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:background="#512DA8"
        android:layout_marginTop="5dp"
        android:textColor="@android:color/white"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:id="@+id/login_now"
        android:clickable="true"
        android:text="@string/login_now"
        android:gravity="center_horizontal"
        android:textColor="@color/colorAccent"/>
</LinearLayout>