<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="60dp">
    
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/userName_layout"
        android:layout_centerHorizontal="true"
        android:textColorHint="#CFD8DC"
        app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout"
        >>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/userName"
            android:textColor="#FFFFFF"
            android:ems="10"
            android:theme="@style/EditTextTheme"
            android:id="@+id/userName"
            android:singleLine="true"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/password_layout"
        android:layout_centerHorizontal="true"
        android:textColorHint="#CFD8DC"
        app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:ems="10"
            android:id="@+id/password"
            android:theme="@style/EditTextTheme"
            android:singleLine="true"
            android:inputType="textPassword"
            android:textColor="#FFFFFF"/>

    </android.support.design.widget.TextInputLayout>

    <Button android:id="@+id/sign_in"
        android:layout_width="match_parent"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        android:background="#512DA8"
        android:layout_marginTop="5dp"
        android:textColor="@android:color/white"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/or"
            android:textSize="20sp"
            android:textColor="#FFFFFF"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@id/tvText"
            android:background="#FFFFFF"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/tvText"
            android:background="#FFFFFF"
            />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/facebook"
            android:id="@+id/facebook"
            android:background="@color/colorPrimaryDark"
            android:layout_weight=".5"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp"
            android:textColor="@android:color/white"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:layout_marginLeft="5dp"
            android:text="@string/luckycode"
            android:id="@+id/luckyCode"
            android:background="#00BCD4"
            android:layout_marginTop="5dp"
            android:textColor="@android:color/white"/>





    </LinearLayout>
    <!--<EditText-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:inputType="textPassword"-->
        <!--android:ems="10"-->
        <!--android:hint="@string/password"-->
        <!--android:id="@+id/password" />-->

    <!--<Button-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:id="@+id/sign_in"-->
        <!--android:text="@string/sign_in"/>-->

    <!--<TextView-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:id="@+id/register_now"-->
        <!--android:text="@string/register_now"-->
        <!--android:gravity="center_horizontal"-->
        <!--android:clickable="true"-->
        <!--android:textColor="@color/colorAccent"/>-->
</LinearLayout>