<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_chose_picture"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="35dp"
        android:paddingRight="35dp"
        android:weightSum="1"
        android:background="@drawable/choose_a_picture_background">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.55">

            <android.support.v7.widget.RecyclerView
                android:layout_marginTop="90dp"
                android:id="@+id/recyclerGallery"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scrollbars="vertical">
            </android.support.v7.widget.RecyclerView>

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:layout_weight="0.45">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tvText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:text="@string/or"
                    android:textSize="25sp"
                    android:textColor="#FFFFFF"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_centerVertical="true"
                    android:layout_toLeftOf="@id/tvText"
                    android:background="#FF0000"
                    />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@id/tvText"
                    android:background="#FF0000"
                    />

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginTop="10dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center">

                    <ImageView
                        android:layout_width="90dp"
                        android:layout_height="90dp"
                        android:id="@+id/imagePreview"
                        android:src="@drawable/empty_profile"/>

                    <TextView
                        android:layout_width="90dp"
                        android:layout_height="90dp"
                        android:id="@+id/textInsideImage"
                        android:layout_alignLeft="@+id/imagePreview"
                        android:layout_alignRight="@+id/imagePreview"
                        android:layout_alignBottom="@+id/imagePreview"
                        android:layout_alignTop="@+id/imagePreview"
                        android:textSize="30sp"
                        android:textColor="#FFFFFF"
                        android:gravity="center"/>

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:id="@+id/linear"
                        android:gravity="center">

                        <Button
                            android:layout_width="wrap_content"
                            android:layout_height="25dp"
                            android:text="@string/browse"
                            android:layout_marginTop="5dp"
                            android:layout_marginRight="15dp"
                            android:background="@color/colorAccent"
                            android:textColor="#FFFFFF"
                            android:layout_centerHorizontal="true"
                            android:layout_toLeftOf="@+id/random"
                            android:id="@+id/browse"/>

                        <Button
                            android:layout_width="wrap_content"
                            android:layout_height="25dp"
                            android:layout_marginTop="5dp"
                            android:background="#009688"
                            android:textColor="#FFFFFF"
                            android:text="@string/random"
                            android:id="@+id/random"
                            android:layout_centerHorizontal="true"/>

                    </LinearLayout>

                    <SeekBar
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/seekBar"
                        android:layout_below="@+id/linear"
                        android:layout_marginTop="10dp"
                        android:progressTint="#FFFFFF"
                        android:thumbTint="#FFFFFF"
                        android:backgroundTint="#FFFFFF"
                        android:max="20"
                        />

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/start"
                        android:text="@string/start"
                        android:layout_alignParentBottom="true"
                        android:layout_marginBottom="10dp"
                        android:background="#00BCD4"
                        android:textColor="#FFFFFF"
                        android:textSize="15sp"/>

                </RelativeLayout>

            </LinearLayout>



        </LinearLayout>


</LinearLayout>

